--- a/Multisig/Cross-layer/Configuration/Config.Example.xcconfig
+++ b/Multisig/Cross-layer/Configuration/Config.Example.xcconfig
@@ -26,7 +26,7 @@ NETWORK = RINKEBY
 // Keys
 
 // Infura - Ethereum Node RPC Service
-INFURA_API_KEY = USE_YOUR_OWN_INFURA_KEY_HERE
+INFURA_API_KEY = 10b17284de764d96b419dbffee60de7a
 
 
 // Configuration Values
@@ -40,11 +40,11 @@ _TRANSACTION_SERVICE_URL_PROD_RINKEBY       = https:/$()/safe-transaction.rinkeb
 _TRANSACTION_SERVICE_URL_PROD_MAINNET       = https:/$()/safe-transaction.gnosis.io/api/
 
 _CLIENT_GATEWAY_URL_DEV_RINKEBY        = https:/$()/safe-client-rinkeby.staging.gnosisdev.com/
-_CLIENT_GATEWAY_URL_DEV_MAINNET        = https:/$()/safe-client-rinkeby.staging.gnosisdev.com/
+_CLIENT_GATEWAY_URL_DEV_MAINNET        = https:/$()/safe-client-mainnet.staging.gnosisdev.com/
 _CLIENT_GATEWAY_URL_STAGING_RINKEBY    = https:/$()/safe-client-rinkeby.staging.gnosisdev.com/
-_CLIENT_GATEWAY_URL_STAGING_MAINNET    = https:/$()/safe-client-rinkeby.staging.gnosisdev.com/
-_CLIENT_GATEWAY_URL_PROD_RINKEBY       = https:/$()/safe-client-rinkeby.staging.gnosisdev.com/
-_CLIENT_GATEWAY_URL_PROD_MAINNET       = https:/$()/safe-client-rinkeby.staging.gnosisdev.com/
+_CLIENT_GATEWAY_URL_STAGING_MAINNET    = https:/$()/safe-client-mainnet.staging.gnosisdev.com/
+_CLIENT_GATEWAY_URL_PROD_RINKEBY       = https:/$()/safe-client-rinkeby.gnosis.io/
+_CLIENT_GATEWAY_URL_PROD_MAINNET       = https:/$()/safe-client-mainnet.gnosis.io/
 
 // Ethereum Node JSONRPC over HTTP Service
 _ETH_RPC_URL_RINKEBY = https:/$()/rinkeby.infura.io/v3/$(INFURA_API_KEY)
